add listing and spacing

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 </head>
 
 <body>
-    <!-- h1 é o titulo -->
-    <h1>Meu primeiro site</h1>
-    <!-- p é o paragrafo  -->
-    <p>Meu primeiro site está sendo feito junto de um curso da DIO</p>
+    <section class="content">
+        <h1>Pokedex</h1>
+
+        <ol>
+            <li>Bulbasaur</li>
+            <li>Ivysaur</li>
+            <li>Venasaur</li>
+        </ol>
+
+    </section>
+
 
     <!-- Nosso JS -->
     <script src="/assets/js/main.js"></script>
