styling the pokemon listing

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol>
+        <ol class="pokemon">
             <li>Bulbasaur</li>
             <li>Ivysaur</li>
             <li>Venasaur</li>
+            <li>Charmander</li>
+            <li>Charmeleon</li>
+            <li>Charizard</li>
         </ol>
 
     </section>
