--- a/index.html
+++ b/index.html
@@ -23,16 +23,38 @@
         <h1>Pokedex</h1>
 
         <ol class="pokemon">
-            <li>Bulbasaur</li>
-            <li>Ivysaur</li>
-            <li>Venasaur</li>
-            <li>Charmander</li>
-            <li>Charmeleon</li>
-            <li>Charizard</li>
+            <li>
+                Bulbasaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" 
+                alt="Bulbasaur">
+            </li>
+            <li>
+                Ivysaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" 
+                alt="Ivysaur">
+            </li>
+            <li>
+                Venasaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" 
+                alt="Venasaur">
+            </li>
+            <li>
+                Charmander
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" 
+                alt="Charmander">
+            </li>
+            <li>
+                Charmeleon
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" 
+                alt="Charmeleon">
+            </li>
+            <li>
+                Charizard
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" 
+                alt="Charizard">
+            </li>
         </ol>
-
     </section>
-
 
     <!-- Nosso JS -->
     <script src="/assets/js/main.js"></script>
