--- a/index.html
+++ b/index.html
@@ -22,36 +22,24 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol class="pokemon">
-            <li>
-                Bulbasaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" 
-                alt="Bulbasaur">
-            </li>
-            <li>
-                Ivysaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" 
-                alt="Ivysaur">
-            </li>
-            <li>
-                Venasaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" 
-                alt="Venasaur">
-            </li>
-            <li>
-                Charmander
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" 
-                alt="Charmander">
-            </li>
-            <li>
-                Charmeleon
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" 
-                alt="Charmeleon">
-            </li>
-            <li>
-                Charizard
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" 
-                alt="Charizard">
+        <ol class="pokemons">
+            <!-- Lista de um pokemon especifico -->
+            <li class="pokemon">
+
+                <!-- header do pokemon -->
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <!-- div com os detalhes do pokemon -->
+                <div class="details">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <!-- Imagem do pokemon -->
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" 
+                    alt="Bulbasaur">
+                </div>
             </li>
         </ol>
     </section>
