gerando um conjunto de listas w/ innerHTML

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol class="pokemons">
+        <ol id="pokemonListHtml" class="pokemons">
             <!-- Lista de um pokemon especifico -->
             <li class="pokemon">
-
                 <!-- header do pokemon -->
                 <span class="number">#001</span>
                 <span class="name">Bulbasaur</span>
-
                 <!-- div com os detalhes do pokemon -->
                 <div class="details">
                     <ol class="types">
@@ -38,14 +36,18 @@
                         <li class="type">poison</li>
                     </ol>
                     <!-- Imagem do pokemon -->
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" 
-                    alt="Bulbasaur">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur">
                 </div>
             </li>
+
+            <!-- ----- Pokemon here ----- -->
+
         </ol>
     </section>
 
     <!-- Nosso JS -->
     <script src="/assets/js/main.js"></script>
 </body>
+
 </html>
