adicionando botão de paginação

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <!-- Lista de um pokemon especifico -->
             <!-- ----- Pokemon here ----- -->
         </ol>
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+        </div>
     </section>
 
     <!-- Nosso JS -->
